# CineMind_MovieBooking

./: .env  .gitignore  README.md  app.py  pyproject.toml
