[project]
name = "langgraph_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[google-genai]>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.10",
    "dotenv>=0.9.9",
    "ipython>=9.6.0",
]
